my_ddpm/.ipynb_checkpoints/nohup-checkpoint.out
  File "my_ddpm.py", line 96
    e = model.predict([u,np.ones(test_size)*(i+1))
                                                 ^
SyntaxError: invalid syntax
